<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/relTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_profile"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/ivProfileProfile"
                    android:layout_width="@dimen/dimen_profile_image_width"
                    android:layout_height="@dimen/dimen_profile_image_height"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/user"
                    app:border_color="@color/white"
                    app:border_width="@dimen/dimen_history_padding" />

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    layout="@layout/progressbar" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relCarImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_weight="1">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/ivProfileCar"
                    android:layout_width="@dimen/dimen_profile_image_width"
                    android:layout_height="@dimen/dimen_profile_image_height"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/car"
                    app:border_color="@color/white"
                    app:border_width="@dimen/dimen_history_padding" />

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    layout="@layout/progressbar1" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relTop" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_profile_margin_left"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_profile_padding_bottom"
            android:paddingLeft="@dimen/dimen_profile_padding"
            android:paddingRight="@dimen/dimen_profile_padding"
            android:paddingTop="@dimen/dimen_profile_padding" >

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dimen_history_margin_left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfilePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_passs"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dimen_history_margin_left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_fname"
                android:paddingLeft="@dimen/dimen_history_margin_left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_lname"
                android:paddingLeft="@dimen/dimen_history_margin_left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal" >

                <com.jozibear247_cab.driver.widget.MyFontTextView
                    android:id="@+id/tvProfileCountryCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:singleLine="true"
                    android:visibility="gone" />

                <com.jozibear247_cab.driver.widget.MyFontEditTextView
                    android:id="@+id/etProfileNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_number"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:paddingLeft="@dimen/dimen_history_margin_left"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@drawable/color" />
            </LinearLayout>

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_address"
                android:paddingLeft="@dimen/dimen_history_margin_left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_bio"
                android:paddingLeft="@dimen/dimen_history_margin_left"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_zip"
                android:inputType="number"
                android:paddingLeft="@dimen/dimen_history_margin_left"
                android:singleLine="true"
                android:maxLength="10"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <com.jozibear247_cab.driver.widget.MyFontTextView
                android:id="@+id/etprofiletimezone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/spinner_ab_default_holo_light"
                android:hint="@string/time_zone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color"
                android:textColorHint="@color/light_gray" />

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_make"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_model"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal" >
                <com.jozibear247_cab.driver.widget.MyFontEditTextView
                    android:id="@+id/etProfileColor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_color"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@drawable/color"
                    android:editable="false"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/bg_rect"
                    android:layout_margin="5dp">
                    <com.jozibear247_cab.driver.widget.MyFontTextView
                        android:id="@+id/tvProfileColor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileRegNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_reg_no"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />

            <com.jozibear247_cab.driver.widget.MyFontEditTextView
                android:id="@+id/etProfileCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_city"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@drawable/color" />
.
        </LinearLayout>
    </ScrollView>

    <com.jozibear247_cab.driver.widget.MyFontButton
        android:id="@+id/tvProfileSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_bottom"
        android:gravity="center"
        android:text="@string/text_submit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

</RelativeLayout>